--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,10 @@
-h1 {
+body {
     font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
-    font-size: 3.5rem;
-    line-height: 1.5;
+    font-weight: 400;
+    text-align: center;
 }
 
-h2 {
-    font-family: "Montserrat";
-    font-weight: 600;
-    font-size: 3rem;
-    line-height: 1.5;
-}
-
-h3 {
+h1, h2, h3, h4, h5, h6 {
     font-family: "Montserrat";
     font-weight: 600;
 }
@@ -21,12 +13,7 @@ p {
     color: #8f8f8f;
 }
 
-body {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-}
-
-/* Classes */
+/******************* Class ****************/
 
 .icon {
     color: #ef8172;
@@ -38,11 +25,10 @@ body {
 }
 
 .container-fluid {
-    padding: 3% 15%;
+    padding: 7% 15%;
 }
 
 .feature-box {
-    text-align: center;
     padding: 5%;
 }
 
@@ -57,31 +43,13 @@ body {
     margin: 20px 20px 50px;
 }
 
-/* ID */
-
-#title {
-    background-color: #ff4c68;
-    color:#fff
+.pricing-column {
+    padding: 3% 2%;
 }
 
-#features {
-    padding: 7% 15%;
+.social-icon {
+    margin: 20px 10px;
 }
-
-#testimonials {
-    padding: 7% 15%;
-    text-align: center;
-    background-color: #ef8172;
-    color: #fff;
-}
-
-#press {
-    background-color: #ef8172;
-    text-align: center;
-    padding-bottom: 3%;
-}
-
-/* Navigation Bar */
 
 .navbar {
     padding: 0 0 4.5rem;
@@ -103,15 +71,91 @@ body {
     font-weight: 300;
 }
 
-/*Download Buttons*/
-
 .download-button {
     margin: 5% 3% 5% 0;
 }
 
-/*Title Image*/
-
 .title-image {
     width: 60%;
     transform: rotate(25deg);
+    position: absolute;
+    right: 30%;
+}
+
+.big-heading {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-size: 3.5rem;
+    line-height: 1.5;
+}
+
+.price-text {
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+.testimonial-text {
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+.section-heading {
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+.feature-title {
+    font-size: 1.5rem;
+}
+/**************** ID ********************/
+
+#title {
+    background-color: #ff4c68;
+    color: #fff;
+    text-align: left;
+}
+
+#features {
+    background-color: #fff;
+    position: relative;
+    z-index: 1;
+}
+
+#testimonials {
+    background-color: #ef8172;
+    color: #fff;
+}
+
+#press {
+    background-color: #ef8172;
+    padding-bottom: 3%;
+}
+
+#pricing {
+    padding: 100px;
+}
+
+#cta {
+    background-color: #ff4c68;
+    color: #fff;
+}
+
+/******* Combining Selectors ********/
+
+#title .container-fluid {
+    padding: 3% 15% 7%;
+}
+
+/************** Media ***************/
+
+@media (max-width: 1028px) {
+
+    #title {
+        text-align: center;
+    }
+
+    .title-image {
+        position: static;
+        transform: rotate(0);
+    }
 }
